<resources>
    <string name="app_name" translatable="false">Aluna Weddings</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="about_us">About Us</string>
    <string name="host">http://alunaweddings.com/en/</string>
    <string name="best_of" translatable="false">Best of</string>
    <string name="title_activity_best_of" translatable="false">Best of</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="aluna_weddings_mail">alunaweddings@gmail.com</string>
    <string name="aluna_weddings">Aluna Weddings</string>
    <string name="aluna_weddings_logo">Aluna Weddings Logo</string>
    <string name="contact_your_date">Your date</string>
    <string name="contact_send">Send</string>
    <string name="contact_name_hint">Name *</string>
    <string name="contact_phone_number">Phone number</string>
    <string name="contact_message_hint">Message</string>
    <string name="no_email_clients_installed">There are no email clients installed.</string>
    <string name="send_mail_chooser">Send mail...</string>
    <string name="contact_email_subject">"Poizvedba, "</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
