<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rivancic.aluna.activities.ContactActivity"
    tools:showIn="@layout/contact_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/contact_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <!-- Contact form -->
        <!-- Ime label in EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_til"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_height="wrap_content">

            <EditText
                android:textSize="@dimen/text_m"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_name_hint" />
        </android.support.design.widget.TextInputLayout>

        <!-- Telefonska stevilka -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_number_til"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_height="wrap_content">

            <EditText
                android:textSize="@dimen/text_m"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_phone_number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Vajin datum -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/datum_til"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="date"
                android:textSize="@dimen/text_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_your_date" />
        </android.support.design.widget.TextInputLayout>


        <!-- Sporocilo -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/message_til"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_height="wrap_content">

            <EditText
                android:textSize="@dimen/text_m"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:lines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_message_hint" />
        </android.support.design.widget.TextInputLayout>

        <!-- Send button -->
        <Button
            android:id="@+id/contact_send_btn"
            android:layout_margin="@dimen/dimen_16"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/contact_send"/>

    </LinearLayout>
</ScrollView>
